把frame框架改成可预览的效果了

--- a/01_henan.html
+++ b/01_henan.html
@@ -1,5 +1,4 @@
-<!-- 这个是成都的地图不是河南的 -->
-
+<!-- 这个是成都的地图不是河南的
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -45,6 +44,44 @@
 
       var url =
         "http://localhost:8090/iserver/services/map-siChuan/rest/maps/%E5%9B%9B%E5%B7%9D%E7%9C%81%401";
+
+      var henan = new L.supermap.tiledMapLayer(url).addTo(map);
+    </script>
+  </body>
+</html> -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="dist/leaflet/include-leaflet.js"></script>
+    <title>henan</title>
+  </head>
+  <body
+    style="
+      margin: 0;
+      overflow: hidden;
+      background: #fff;
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+    "
+  >
+    <div id="map" style="width: 100%; height: 100%"></div>
+
+    <script>
+      var map = L.map("map", {
+        center: { lng:  104.1, lat: 30.65  },
+        zoom: 11,
+        crs: L.CRS.EPSG4326,
+      });
+
+      // var url =
+      //   "http://localhost:8090/iserver/services/map-henan/rest/maps/henan";
+      var url ="http://localhost:8090/iserver/services/map-ChengduFresh/rest/maps/ChengduMap"
 
       var henan = new L.supermap.tiledMapLayer(url).addTo(map);
     </script>
